// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Correctly applies horizontal/vertical alignment to Stack (horizontal) 1`] = `
<body>
  <div>
    <div
      class="___1n7lss6 f1063pyq f22iagw fni485r fnmxc1e fynvm4a f4d9j23 f122n59"
    />
  </div>
</body>
`;

exports[`Stack Correctly applies horizontal/vertical alignment to Stack (vertical) 1`] = `
<body>
  <div>
    <div
      class="___1dkafrz f1vx9l62 f22iagw fni485r fnmxc1e fynvm4a f122n59 f4d9j23"
    />
  </div>
</body>
`;

exports[`Stack renders a basic Stack 1`] = `
<body>
  <div>
    <div
      class="___2q39d80 f1063pyq f22iagw fni485r fnmxc1e fynvm4a f1s9ku6b f1s2louj"
    />
  </div>
</body>
`;

exports[`Stack renders a divider Stack 1`] = `
<body>
  <div>
    <div
      class="___2q39d80 f1063pyq f22iagw fni485r fnmxc1e fynvm4a f1s9ku6b f1s2louj"
    >
      <p>
        Hello
      </p>
       - 
      <p>
        Hello
      </p>
    </div>
  </div>
</body>
`;

exports[`Stack renders a divider Stack with once child 1`] = `
<body>
  <div>
    <div
      class="___2q39d80 f1063pyq f22iagw fni485r fnmxc1e fynvm4a f1s9ku6b f1s2louj"
    />
  </div>
</body>
`;

exports[`Stack renders a vertical Stack 1`] = `
<body>
  <div>
    <div
      class="___17t8msf f1vx9l62 f22iagw fni485r fnmxc1e fynvm4a f1s2louj f1s9ku6b"
    />
  </div>
</body>
`;
